--- a/source/app/index.html
+++ b/source/app/index.html
@@ -37,7 +37,7 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: version <span app-version>1.0</span></div>
+  <div><p>Version<span app-version>1.0</span></p></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
